web/static/css/_global.scss
/* ... */
// ------- Left Survey collection Wizard ----------

.collection.wizard {
  @extend .z-depth-1;
  border-radius: 5px;
  .collection-header {
    @extend .grey, .lighten-4;
    position: relative;
    p {
      @extend .grey-text
    }
    .progress {
      @extend .grey, .lighten-2;
      position: absolute;
      bottom: 0;
      left: 0;
      margin: 0;
      width: 100%;
      height: 6px;
      .determinate {
       @extend .green, .accent-4;
      }
    }
  }
  .collection-item {
    padding: 0 !important;
    border: none;
    > a {
      @extend .truncate;
      @extend .black-text;
      width: 100%;
      position: relative;
      padding: 20px 35px 20px 20px;
      > i {
        vertical-align: middle;
        margin-right: 15px;
      }
      .arrowright {
        @extend .grey-text;
        position: absolute;
        right: 10px;
      }
    }
    a.active {
      @extend .grey.lighten-3;
      @extend .black-text;
    }
    a:hover {
      @extend .grey.lighten-4;
    }
    &.completed {
      a, a.active {
        @extend .green-text;
      }
    }
  }
}

.sidebar.pinned { // width fix when sidebar is pinned on top
  width: 24.9vw;
  .wizard {
    margin-top: 0px;
  }
}




  // ------- Respondent Chart SVG classes for completed Surveys -----------

    .line.respondentsData {
      fill: none;
      stroke: #4caf50;
      stroke-width: 2.0px;
    }

    .line.backgroundData {
      fill: none;
      stroke: #999;
      stroke-width: 0.75px;
    }

    .axis line, .axis path{
      fill: none;
      stroke: #000;
      stroke-width: 1.0;
      opacity: 0.25;
    }

    .axis > path{
      stroke: none;
    }

    .y.axis g:first-child text{
      fill: none;
    }

    .x.axis .tick line{
      stroke: none;
    }

    .axis text {
      text-transform: uppercase;
      dominant-baseline:text-after-edge;
      font-size: 12px;
      opacity: 0.25;
    }

  // ------- / Respondent Chart SVG classes for completed Surveys -----------



// -----------------------------------------------------------------------------
// ------- Questionnaires ------------------------------------------------------

.questionnaire-modes {
  .row > .col {
    padding-left: 0;
    padding-right: 0;
  }
  i {
    margin-right: 10px;
  }
  .mode-label {
    @extend .truncate;
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    &.active {
      font-weight: bold;
      cursor: default;
    }
  }
  .mode-list {
    cursor: pointer;
    height: 28px;
    .delete-mode {
      opacity: 0;
    }
    &:hover {
      .delete-mode {
        @extend .grey-text;
        opacity: 1;
      }
    }
    &.tooltip-error {
      position: relative;
      &:after {
        content: '';
        @extend .back-error;
        display: block;
        border-radius: 50%;
        width: 12px;
        height: 12px;
        position: absolute;
        top: 5px;
        right: 37px;
      }
    }
  }
  .add-mode {
    @extend .black-text;

    a {
      @extend .black-text;
    }

    i.material-icons {
      &.right {
        display: none;
      }
    }

    ul {
      box-shadow: 0 2px 10px 2px rgba(0,0,0,.4);
      width: auto !important;
      margin-left: -15px;
      margin-top: -10px;
      border-radius: 5px;
      li {
        box-sizing: border-box;
        i.material-icons {
          @extend .black-text;
          display: inline-block;
          line-height: 1.8;
          margin-right: 5px;
          vertical-align: middle;
        }
        a {
          @extend .black-text;
          padding: 6px 22px 6px 16px;
          white-space: nowrap;
          display: block;
        }
      }
    }
  }
  .switch.right {
    @include transform(scale(0.85));
    margin-right: -20px;
  }
}

.survey-questionnaires {
  .tooltip-error {
    position: relative;
    &:after {
      content: '';
      @extend .back-error;
      display: block;
      border-radius: 50%;
      width: 12px;
      height: 12px;
      position: absolute;
      top: 3px;
      right: -20px;
    }
  }
}

.questionnaire-error {
  @extend .back-error;
  display: block;
  border-radius: 50%;
  width: 12px;
  height: 12px;
}

.wizard-content {
  > div {
    min-height: 110vh;
  }
}

.step-mode {
  position: relative;

  .dropdown-button {
    @extend .black-text;
  }
  i.right {
    @extend .grey-text, .lighten-1;
    margin: 0;
  }
  .dropdown-content.active {
    @extend .z-depth-4;
    border-radius: 4px;
    top: -20px !important;
    left: -8px !important;
    min-width: 220px;
    i {
      min-width: 22px;
      &.right {
        @extend .black-text;
      }
    }
    > li > a {
      @extend .black-text;
    }
  }
  &.underlined {
    border-bottom: 1px solid color('grey','lighten-2');
    display: inline-block;
    padding-bottom: 5px;
    span {
      i {
        vertical-align: text-bottom;
      }
    }
  }
}

.character-counter {
  float: right;
  height: 1px;
  font-size: 10px;
}


  // ------- Questionnaires language selector ----------

  .language-selection {
    position: relative;
    .language-dropdown {
      position: absolute;
      width: 100%;
      max-height: 280px;
      li {
        line-height: 3;
        padding: 0 1rem;
      }
    }
  }

  .var-dropdown {
    position: absolute;
    width: 100%;
    max-height: 280px;
    li {
      line-height: 3;
      padding: 0 1rem;
    }
  }

  .selected-language {
    li {
      position: relative;
      line-height: 54px;
      padding-left: 30px;
      height: 54px;
      span {
        @extend .truncate;
        width: 70%;
      }
      i {
        @extend .grey-text;
        position: absolute;
        top: 15px;
        right: 0px;
      }
      .right-arrow {
        cursor: pointer;
      }
    }
  }
/* ... */

